# unitycatalog-rs

./: Cargo.toml  README.md
.github/workflows/: cd.yml  check-and-lint.yaml  ci.yml  test.yaml
.github/workflows/scripts/: check_publication.sh  get_version.sh  increment_version.sh  run_publication.sh
unitycatalog-rs/: Cargo.toml
unitycatalog-rs/.github/workflows/: cd.yml  ci.yml
unitycatalog-rs/src/: errors.rs  lib.rs  request.rs  testing.rs
unitycatalog-rs/src/clients/: catalogs.rs  mod.rs
unitycatalog-rs/src/oss/: catalogs.rs  schemas.rs  tables.rs
unitycatalog-rs/src/oss/api/: catalogs.rs  mod.rs  schemas.rs  tables.rs
unitycatalog-rs/src/oss/api/snapshots/: unitycatalog_rs__oss__api__catalogs__tests__list.snap  unitycatalog_rs__oss__api__catalogs__tests__not_found.snap  unitycatalog_rs__oss__api__schemas__tests__not_found.snap  unitycatalog_rs__oss__api__schemas__tests__round_trip.snap  unitycatalog_rs__oss__api__tables__tests__round_trip.snap
unitycatalog-rs/src/oss/snapshots/: unitycatalog_rs__clients__catalogs__tests__list.snap  unitycatalog_rs__clients__catalogs__tests__not_found.snap  unitycatalog_rs__clients__catalogs__tests__round_trip.snap  unitycatalog_rs__oss__catalogs__tests__list.snap  unitycatalog_rs__oss__catalogs__tests__not_found.snap  unitycatalog_rs__oss__catalogs__tests__round_trip.snap  unitycatalog_rs__oss__schemas__tests__not_found.snap  unitycatalog_rs__oss__schemas__tests__round_trip.snap
