[package]
name = "unitycatalog-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.62"
tracing = "0.1.40"
url = "2.5.2"

[dev-dependencies]
insta = { version = "1.39.0", features = ["filters"] }
tokio = { version = "1.38.0", features = ["test-util", "macros"] }
