[package]
name = "unitycatalog-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
derive_builder = "0.20.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.62"
tracing = "0.1.40"
url = "2.5.2"

[dev-dependencies]
futures-util = "0.3.30"
insta = { version = "1.39.0", features = ["filters"] }
port_scanner = "0.1.5"
tokio = { version = "1.38.0", features = ["test-util", "macros", "full"] }
tracing-test = "0.2.5"
